--- a/src/shared/components/Button/Button/Button.module.css
+++ b/src/shared/components/Button/Button/Button.module.css
@@ -1,10 +1,7 @@
-/*
-* Стили компонента Buton (Load more)
-*/
 .Button {
   margin: 0 auto;
   padding: 8px 16px;
-  border-radius: 6px;
+  border-radius: 8px;
   background-color: rgb(22, 97, 116);
   transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
   text-align: center;
@@ -18,7 +15,7 @@
   line-height: 24px;
   font-style: normal;
   font-weight: 500;
-  width: 180px;
+  width: 100%;
   box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2),
     0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
 }
