--- a/src/shared/components/TextField/TextField.module.css
+++ b/src/shared/components/TextField/TextField.module.css
@@ -1,13 +1,18 @@
 .wrapper {
   display: flex;
-  flex-wrap: wrap;
-  align-items: center;
+  flex-direction: column;
+  align-items: right;
   gap: 10px;
   margin-bottom: 15px;
 }
 
 .field {
   padding: 10px;
-  border: 1px solid;
-  border-radius: 5px;
+  border: 1px solid rgb(22, 97, 116);
+  border-radius: 8px;
+}
+
+.label {
+  font-size: 20px;
+  color: rgb(22, 97, 116);
 }
