--- a/src/components/MyContacts/MyContacts.module.css
+++ b/src/components/MyContacts/MyContacts.module.css
@@ -6,7 +6,6 @@
 
 .block {
   width: 400px;
-
   padding: 15px;
 }
 
@@ -15,6 +14,10 @@
 }
 
 .title {
-  color: rgb(90, 86, 86);
+  color: rgb(22, 97, 116);
   text-align: center;
+}
+
+.text {
+  color: rgb(22, 97, 116);
 }
