--- a/src/components/Navbar/NavbarUser/NavbarUser.module.css
+++ b/src/components/Navbar/NavbarUser/NavbarUser.module.css
@@ -16,3 +16,26 @@
   font-weight: bold;
   color: #831d1d;
 }
+
+.button {
+  padding: 4px 8px;
+  border-radius: 8px;
+  background-color: #fff;
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  text-align: center;
+  display: inline-block;
+  color: rgb(22, 97, 116);
+  border: 0;
+  text-decoration: none;
+  cursor: pointer;
+  font-family: inherit;
+  font-size: 18px;
+  line-height: 24px;
+  font-style: normal;
+  font-weight: 500;
+}
+
+.button:hover,
+.button:focus {
+  color: #831d1d;
+}
