--- a/src/shared/components/TextField/TextField.module.css
+++ b/src/shared/components/TextField/TextField.module.css
@@ -10,6 +10,8 @@
   padding: 10px;
   border: 1px solid rgb(22, 97, 116);
   border-radius: 8px;
+  font-family: inherit;
+  color: rgb(22, 97, 116);
 }
 
 .label {
